moved some preprocessing work out of scala into java native